# xr2280x-hid

./: .gitignore  CHANGELOG.md  Cargo.toml  PERFORMANCE_IMPROVEMENTS.md  README.md  RELEASE.md  pre-release-check.sh
.github/workflows/: ci.yml
docs/: I2C_ERROR_GUIDE.md  I2C_TIMEOUT_IMPROVEMENTS.md
examples/: blink.rs  consistent_pin_api.rs  enhanced_error_handling.rs  enumerate_hardware.rs  gpio_efficient_config.rs  gpio_interrupt_safe_usage.rs  gpio_reliability_demo.rs  gpio_transactions.rs  hardware_device_usage.rs  i2c_10bit_addressing.rs  i2c_error_demo.rs  i2c_scan.rs  i2c_scan_advanced.rs  i2c_test_stuck_bus.rs  i2c_timeouts.rs  list_and_select.rs  multi_device_selection.rs  pwm_out.rs
src/: consts.rs  device.rs  error.rs  gpio.rs  i2c.rs  interrupt.rs  lib.rs  pwm.rs
tests/: gpio_reliability_tests.rs  gpio_transaction_tests.rs  hardware_tests.rs  multi_device_tests.rs  test_10bit_unit.rs
