[package]
name = "xr2280x-hid"
version = "0.9.4"
edition = "2024"
authors = ["Tibor Gats <tibor.gats@gmail.com>"]
description = "Control XR2280x I2C and GPIO/PWM/Interrupts over USB HID"
license = "WTFPL"                                                        # crates.io prefers SPDX identifiers.
readme = "README.md"
repository = "https://github.com/tiborgats/xr2280x-hid"
homepage = "https://github.com/tiborgats/xr2280x-hid"
documentation = "https://docs.rs/xr2280x-hid"
keywords = ["xr22804", "xr22802", "xr22801", "xr22800", "maxlinear"]
categories = ["hardware-support", "embedded", "api-bindings"]

[dependencies]
hidapi = "2.6"
thiserror = "2.0"
log = "0.4"

[dev-dependencies]
# For running examples and tests
env_logger = "0.11" # Or latest
approx = "0.5"      # For float comparisons in tests
